--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.0.0",
-    "react-native-svg-transformer": "^1.1.0"
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-text-gradient": "^0.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
